# rtbf

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: code-quality.yml  docker-build.yml
rtbf/: __init__.py  __main__.py
