[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "rtbf"
version = "1.0.0"
description = "Reddit comment management tool with configurable expiration policies"
authors = ["RTBF Team"]
readme = "README.md"
license = "GPL-3.0"
keywords = ["reddit", "privacy", "comment", "management", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Message Boards",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
praw = ">=7.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=22.0.0"
flake8 = ">=5.0.0"
mypy = ">=1.0.0"
isort = ">=5.0.0"
bandit = ">=1.7.0"
pre-commit = ">=3.0.0"

[tool.poetry.scripts]
rtbf = "rtbf.__main__:main"

[tool.poetry.urls]
Homepage = "https://github.com/username/rtbf"
Repository = "https://github.com/username/rtbf"
Issues = "https://github.com/username/rtbf/issues"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
